fix a styling problem on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -57,7 +57,7 @@
 
 
 @media screen and (max-width: 767px) {
-  .order__header {
+  .order__header, .order__banner {
     background-attachment: scroll;
   }
 }
